--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ baseurl: "/hunterdataanalytics" # the subpath of your site, e.g. "/blog".
 minima:
   social_links:
     twitter: hunteranalytics
-    linkedin: hunter-data-analytics
+    facebook: hunteranalytics
 
 # Set this to true to get LaTeX math equation support
 use_math: true
